# vibelympics

./: .env  Makefile  README.md  docker-compose.yml  git-history.txt
backend/: Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  index.html  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: HouseScene.jsx  SearchForm.jsx  VulnerabilityView.jsx
round_1/: .env  ABOUT.md  Makefile  README.md  docker-compose.yml
round_1/backend/: Dockerfile  pyproject.toml  requirements.txt
round_1/backend/src/: app.py
round_1/frontend/: Dockerfile  index.html  package.json  tailwind.config.js
round_1/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
round_1/frontend/src/components/: IntroAnimation.tsx  Track.tsx  VictoryPopup.tsx
round_2/: .gitignore  ABOUT.md  README.md
round_2/backend/: app.py  pyproject.toml
round_2/frontend/: .eslintrc.cjs  Dockerfile  package.json  vite.config.js
round_2/frontend/src/: App.jsx
round_2/frontend/src/components/: HouseScene.jsx  VulnerabilityView.jsx
